--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h1 {
 }
 
 .input-letter, .input-letter-empty {
+    -webkit-appearance: none;
     color: #f2f2f2;
     text-align: center;
     background-color: rgba(0, 0, 0, 0);
@@ -37,7 +38,7 @@ h1 {
     border-right: none;
     border-left: none;
     margin: 0px 3px;
-    width: 40px;
+    width: 30px;
     outline: none;
     border-radius: 0%;
 }
